--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/router": "^19.2.14",
     "my-app": "file:",
+    "ngx-pagination": "^6.0.3",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
