--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.2.14",
     "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/router": "^19.2.14",
+    "date-fns": "^4.1.0",
     "my-app": "file:",
     "ngx-pagination": "^6.0.3",
     "primeng": "^19.1.3",
@@ -31,6 +32,7 @@
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@types/date-fns": "^2.5.3",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
